--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -5,7 +5,10 @@ $dark-gray: #2a2a2a
 $light-gray: #ddd
 $black: #000
 $light-black: #1d1d1b
+$light-green: #b6dbd2
+$light-green2: #a8e2bb
 $yellow-brown: #ffe6a9
+$purple: #cfcfe2
 
 $c_hour: #706f6f
 $c_visiting: $light-black
