--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -22,6 +22,11 @@ $icon-error: "\EA0E"
 $icon-logout: "\EA0F"
 $icon-calenadar-left: "\EA10"
 $icon-arr-right: "\EA11"
+$icon-exclamation: "\EA12"
+$icon-step-icon1: "\EA13"
+$icon-step-icon2: "\EA14"
+$icon-step-icon3: "\EA16"
+$icon-step-icon4: "\EA18"
 
 
 %icon
@@ -72,3 +77,13 @@ $icon-arr-right: "\EA11"
 	content: $icon-calenadar-left
 .icon-arr-right:before
 	content: $icon-arr-right
+.icon-exclamation:before
+	content: $icon-exclamation
+.icon-step-icon1:before
+	content: $icon-step-icon1
+.icon-step-icon2:before
+	content: $icon-step-icon2
+.icon-step-icon3:before
+	content: $icon-step-icon3
+.icon-step-icon4:before
+	content: $icon-step-icon4
