--- a/src/sass/_teacher.sass
+++ b/src/sass/_teacher.sass
@@ -1,6 +1,7 @@
 body.is-teacher
 	.out
 		width: 100%
+		height: 100%
 		display: inline-table
 		+r(960)
 			display: block
@@ -200,6 +201,7 @@ body.is-teacher
 		margin-top: 30px
 		text-align: center
 
+// outlet
 .outlet
 	text-align: center
 	font-size: 16px
@@ -226,3 +228,8 @@ body.is-teacher
 			line-height: 1.3
 			vertical-align: middle
 			display: inline-block
+
+// appraisal
+.appraisal
+	padding: 22px 50px
+	border: 5px solid
