--- a/src/sass/_ui.sass
+++ b/src/sass/_ui.sass
@@ -70,6 +70,12 @@ div.ui-datepicker
 		a
 			padding: 1em .2em .2em .2em
 			text-align: left
+		td
+			&.is-select
+				span,
+				a
+					cursor: default
+					color: $white
 	thead
 		text-transform: uppercase
 		font-size: 9px
