--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -35,7 +35,22 @@
 					background: $white
 			.menu__list
 				&:before
-					background: $white		
+					background: $white	
+	.logo
+		position: absolute
+		top: 0
+		left: 50%
+		margin-left: -92px
+		z-index: 1
+		+r(768)
+			top: 96px
+			margin-left: -68px
+	.logout
+		float: right
+	.step-ico
+		margin: -50px 0 0 32px
+		padding-top: 58px
+		line-height: 1	
 	&__in 
 		position: relative
 		@extend %in 
@@ -70,32 +85,6 @@
 		text-align: right
 		font-size: 0
 		overflow: hidden
-	.logo
-		position: absolute
-		top: 0
-		left: 50%
-		margin-left: -92px
-		z-index: 1
-		+r(768)
-			top: 96px
-			margin-left: -68px
-	.logout
-		float: right
-
-// step-ico
-.step-ico
-	margin: -50px 0 0 32px
-	padding-top: 58px
-	width: 105px
-	height: 105px
-	vertical-align: top
-	border-radius: 50%
-	overflow: hidden
-	text-align: center
-	background: $yellow
-	display: inline-block
-	&:first-child
-		margin-left: 0
 
 // menu
 .menu
