--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -72,6 +72,12 @@ body
 	line-height: 1.4
 	&.is-hidden
 		overflow: hidden
+	&.is-map
+		.out
+			padding-bottom: 0
+		.map
+			min-height: 100%
+			height: 100%
 	+r(768)
 		font-size: 16px
 	
