--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -76,6 +76,8 @@ body.is-home
 			color: $white
 		.icon
 			font-size: 60px
+			&:before
+				vertical-align: middle
 	.popup
 		&__in
 			width: 90%
