--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -42,7 +42,29 @@
 									<button class="btn" type="submit">ВОЙТИ</button>
 								</div>
 								<div class="popup__chenge">
-									<a href="#">Забыл пароль</a>
+									<a class="js-forgot-password" href="#">Забыл пароль</a>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+				<!-- popup -->
+				<div class="popup js-popup js-chenge-password">
+					<div class="popup__in">
+						<button class="popup__close js-popup-close"><i class="icon icon-close"></i></button>
+						<div class="popup__form">
+							<h3 class="title-medium">Змінити <br>пароль</h3>
+							<form action="">
+								<div class="row">
+									<label for="phone" class="label">Старий (номер телефону)</label>
+									<input type="text" name="phone" id="phone" class="input js-input-phone">
+								</div>
+								<div class="row">
+									<label for="password" class="label">Новий пароль</label>
+									<input type="passwod" name="password" id="password" class="input js-input-password" placeholder="_______">
+								</div>
+								<div class="row">
+									<button class="btn" type="submit">ЗМІНИТИ</button>
 								</div>
 							</form>
 						</div>
