--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -23,6 +23,9 @@
 		z-index: 100
 		.popup__in
 			transform: scale(1) 
+	&.is-active-popup
+		& > .popup__in
+			transform: scale(0) 
 	.popup__step
 		.title-medium
 			margin-bottom: 8px
