--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -29,7 +29,7 @@
 									<label for="password" class="field__label">
 										<i class="icon icon-key"></i>
 									</label>
-									<input type="passwod" name="password" id="password" class="input js-input-password" placeholder="_______" data-validation="required" data-validation-length="min20">
+									<input type="password" name="password" id="password" class="input js-input-password" placeholder="_______" data-validation="required" data-validation-length="min20">
 								</div>
 								<div class="popup__check">
 									<label class="checkbox">
