--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -13,6 +13,7 @@
 	vertical-align: top
 	display: table-cell
 	+r(1280)
+		padding-left: 140px
 		width: calc(100% - 140px)
 	+r(960)
 		padding: 30px 0
@@ -58,7 +59,7 @@
 
 // sidebar
 .sidebar
-	position: relative
+	position: fixed
 	padding: 68px 20px 10px
 	width: 11%
 	height: 100%
@@ -71,6 +72,7 @@
 	+r(1280)
 		width: 140px
 	+r(960)
+		position: relative
 		padding: 12px 45px
 		width: 100%
 		height: 50px
