--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -66,7 +66,8 @@ body.is-home
 				+rh(775)
 					margin-top: 6px
 	&__text
-		width: 1200px 
+		display: inline-block
+		transform: translateX(30px)
 
 // video
 .video
