--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -58,7 +58,7 @@
 	&__bg
 		position: absolute
 		top: 0
-		left: 0
+		right: 0
 		background-repeat: no-repeat
 		background-size: cover
 		background-position: 50% 0
