--- a/src/sass/_student.sass
+++ b/src/sass/_student.sass
@@ -222,6 +222,9 @@ body.is-student
 		.btn.btn_color
 			+r(768)
 				padding: 10px 6px
+	.footer 
+		position: relative
+		margin-top: -60px
 
 
 // mixin to step colors
@@ -287,7 +290,7 @@ body.is-student
 	position: absolute
 	left: 0
 	right: 0
-	bottom: 0
+	bottom: 60px
 	+rb
 	+r(960)
 		display: none
