--- a/src/sass/_ui.sass
+++ b/src/sass/_ui.sass
@@ -71,6 +71,10 @@ div.ui-datepicker
 			padding: 1em .2em .2em .2em
 			transition: background .2s, border-color .2s
 			text-align: left
+			&.ui-state-active
+				background: $white
+				color: $black  
+				border-color: transparent 
 		td
 			&.is-select
 				span,
