--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -109,6 +109,18 @@
 		+r(960)
 			margin-top: 45px
 
+// logo-wrap
+.logo-wrap
+	position: fixed
+	left: 0
+	width: 11.7%
+	min-width: 140px
+	+r(960)
+		position: static
+		left: auto
+		width: auto
+		min-width: 0
+
 // logo
 .logo
 	transform: translate3d(0,0,0)
