--- a/src/sass/_student.sass
+++ b/src/sass/_student.sass
@@ -10,6 +10,7 @@ body.is-student
 	.sidebar
 		position: relative
 		padding-top: 40px
+		z-index: 2 
 		background: $yellow
 		+r(960)
 			padding: 12px 42px
