--- a/src/sass/_student.sass
+++ b/src/sass/_student.sass
@@ -427,7 +427,7 @@ body.is-student
 			width: 100%
 			text-align: center
 		.btn
-			margin-top: 15px
+			margin-top: 8px
 	&__title
 		margin-bottom: 20px
 		+lb
@@ -504,6 +504,10 @@ body.is-student
 				padding-top: 12px
 			&:last-child td
 				padding-bottom: 0
+		td
+			&:last-child 
+				.point
+					text-align: right
 	.date
 		+lr
 	.test
