--- a/src/sass/_teacher.sass
+++ b/src/sass/_teacher.sass
@@ -6,6 +6,9 @@ body.is-teacher
 		+r(960)
 			height: auto
 			display: block
+	.l 
+		& > .title-large
+			text-transform: uppercase
 
 
 // nav-block
