--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -972,6 +972,9 @@ h1,
 			&:before
 				+arr(15,7,$light-black,b)
 		& + .accord
+			&.is-active
+				.accord__top
+					border-top-color: $yellow
 			.accord__top
 				border-top-color: $yellow
 	&.is-active
